# AI_GoBang_Public

./: .gitignore  CMakeLists.txt  LICENSE  README.md
sources/: Application.cpp  Application.h  Event.h  EventManager.cpp  EventManager.h  Scene.cpp  Scene.h  main.cpp
sources/ChessCore/: ACEngine.cpp  ACEngine.h  ChessEngine.cpp  ChessEngine.h  ChessManager.cpp  ChessManager.h
sources/General/: BenchMark.cpp  BenchMark.h  General.cpp  General.h
sources/Object/: Chess.cpp  Chess.h  ChessBoard.cpp  ChessBoard.h  GameObject.h  Message.cpp  Message.h  UI.cpp  UI.h  highLightChess.cpp  highLightChess.h
